--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "@supabase/supabase-js": "^2.57.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "framer-motion": "^12.23.15"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
